--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             <p class="name">Fmkli</p>
             <p class="jianjie2">鸽子一只</p>
         </div>
-        <div class="Abouts">
-            <hr>
+    </div>
+    <div class="mainbox2">
+        <div class="links">
             <p>
                 你好！欢迎访问我的网站！<br>
                 页面是我在 2023/4/30 写的。<br>
@@ -27,26 +28,30 @@
             </p>
         </div>
     </div>
-    <div class="mainbox2">
+    <div class="mainbox3">
         <div class="links">
-            <h3 class="">Links</h3>
+            <div class="no1page" id="no1page">
+                <h3 class="">Links</h3>
                 Blog: <a href="https://blog.imfmkli.top">Blog</a>--<a href="https://blog2.imfmkli.top/">备用Blog</a><br>
                 Other: <a href="https://www.imfmkli.top/talk2.html">留言板</a>--<a href="https://www.imfmkli.top/say.html">说说</a><a href="https://www.imfmkli.top/goodpassword">密码生成</a><br>
                 Game: <a href="https://dino.imfmkli.top/">小恐龙</a>--<a href="https://sg.imfmkli.top/?lang=zh_cn">A Dark Roo</a>--<a href="https://eatkano.imfmkli.top/">吃掉小菜狗</a><br>
                 Contact Me: <a class="mdui-list-item mdui-ripple" href="https://github.com/fmkli">Github</a>--<a class="mdui-list-item mdui-ripple" href="https://space.bilibili.com/543825809">BiliBili</a>--<a class="mdui-list-item mdui-ripple" href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2">CCW</a>--<a class="mdui-list-item mdui-ripple" href="mailto:fmkli2@qq.com">Mail</a>--<a class="mdui-list-item mdui-ripple" href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a><br>
-
             </div>
+            <div class="no2page" id="no2page">
+                <p>
+                    <h3 class="">其它</h3>
+                    Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>--<a class="lianjie" href="https://www.zxqblog.cn/">小钊的博客</a>
+                    <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
+                    <br><span id="lasttime">载入倒计时...</span>
+                    <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
+                    <h2><a href="https://www.imfmkli.top/video/114514.mp4">这是一个可点击的链接</a></h2>
+                </p>
+            </div>
+            <div class="openfooter" id="openfooter" onclick="openfooter();">点我打开脚页</div>
+        </div>
     </div>
-    <div class="footer" id="footer">
-        <p>
-            Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>--<a class="lianjie" href="https://www.zxqblog.cn/">小钊的博客</a>
-            <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
-            <br><span id="lasttime">载入倒计时...</span>
-            <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
-            <h2><a href="https://www.imfmkli.top/video/114514.mp4">这是一个可点击的链接</a></h2>
-        </p>
-    </div>
-    <div class="openfooter" id="openfooter" onclick="openfooter();">点我打开脚页</div>
+
+    <p class="copy">Made By Fmkli</p>
     <!-- JS INPUT -->
     <script src="./static/js/index.js"></script>
 </body>
