--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h2><a href="https://www.imfmkli.top/video/114514.mp4">这是一个可点击的链接</a></h2>
                 </p>
             </div>
-            <div class="openfooter" id="openfooter" onclick="openfooter();">点我打开脚页</div>
+            <div class="openfooter" id="openfooter" onclick="openfooter();">点我查看其他</div>
         </div>
     </div>
 
