--- a/talk2.html
+++ b/talk2.html
@@ -17,8 +17,8 @@
                 <div class="mdui-card-content mdui-typo">
                   <h2>Win8以下的系统因为不兼容证书可能导致无法加载留言板</h2>
 
-<script src='//unpkg.com/@waline/client@v2/dist/waline.js'></script>
-<link href='//unpkg.com/@waline/client@v2/dist/waline.css' rel='stylesheet' />
+<script src='//npm.elemecdn.com/@waline/client@v2/dist/waline.js'></script>
+<link href='//npm.elemecdn.com/@waline/client@v2/dist/waline.css' rel='stylesheet' />
 
   <div id="waline"></div>
   <script>
