--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
             <p class="jianjie2">鸽子一只</p>
         </div>
     </div>
-    <div class="mainbox2">
-        <div class="links">
+    <div class="mainbox2" onclick="openyiy2();">
+        <div class="links about2" id="about2">
             <p>
-                你好！欢迎访问我的网站！<br>
-                页面是我在 2023/4/30 写的。<br>
-                写的不是很好看，还请多多指导！<br>
                 <h3 class="">About Me</h3>
                 一名专注潜水的鸽子！<br>
                 喜欢玩Among Us、Train Sim World2、人类一败涂地以及Minecraft！<br>
                 只在周五、六、日以及节假日上线
             </p>
+        </div>
+        <div class="openyiy" id="openyiy">
+            点击查看一言！
+        </div>
+        <div class="yiyan2" id="yiyan2">
+            <div class="links">
+                <p>
+                    <span id="hitokoto_text2"></span><br>--<span id="zuozhe2"></span>
+                </p>
+            </div>
         </div>
     </div>
     <div class="mainbox4">
@@ -50,6 +57,13 @@
     </div>
     <div class="footer2" id="footer2">
         <p>
+            <div class="Links2">
+                <h3 class="">Links</h3>
+                Blog: <a href="https://blog.imfmkli.top">Blog</a>--<a href="https://blog2.imfmkli.top/">备用Blog</a><br>
+                Other: <a href="https://www.imfmkli.top/talk2.html">留言板</a>--<a href="https://www.imfmkli.top/say.html">说说</a>--<a href="https://www.imfmkli.top/goodpassword">密码生成</a><br>
+                Game: <a href="https://dino.imfmkli.top/">小恐龙</a>--<a href="https://sg.imfmkli.top/?lang=zh_cn">A Dark Room</a>--<a href="https://eatkano.imfmkli.top/">吃掉小菜狗</a><br>
+                Contact Me: <a class="mdui-list-item mdui-ripple" href="https://github.com/fmkli">Github</a>--<a class="mdui-list-item mdui-ripple" href="https://space.bilibili.com/543825809">BiliBili</a>--<a class="mdui-list-item mdui-ripple" href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2">CCW</a>--<a class="mdui-list-item mdui-ripple" href="mailto:fmkli2@qq.com">Mail</a>--<a class="mdui-list-item mdui-ripple" href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a><br>
+            </div>
             <h3 class="">其它</h3>
             Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>--<a class="lianjie" href="https://www.zxqblog.cn/">小钊的博客</a>
             <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
