--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/css/style.css">
-    <!-- JQUERY INPUT -->
+    <!-- JS INPUT -->
     <script src="./jquery.min.js"></script>
     <title>Fmkli的简洁主页</title>
 </head>
@@ -84,5 +84,6 @@
 
     <!-- JS INPUT -->
     <script src="./static/js/index.js"></script>
+    <script src="./wel.js"></script>
 </body>
 </html>
