--- a/say.html
+++ b/say.html
@@ -23,12 +23,12 @@
                   />
                   <link
                     rel="stylesheet"
-                    href="https://cdn.jsdelivr.net/npm/ispeak@4.4.0/style.css"
+                    href="https://github.elemecdn.com/ispeak@4.4.0/style.css"
                   />
                   
                   <script src="https://cdn.staticfile.org/highlight.js/10.6.0/highlight.min.js"></script>
                   <script src="https://cdn.staticfile.org/marked/2.0.0/marked.min.js"></script>
-                  <script src="https://cdn.jsdelivr.net/npm/ispeak@4.4.0/ispeak.umd.js"></script>
+                  <script src="https://github.elemecdn.com/ispeak@4.4.0/ispeak.umd.js"></script>
                     <!-- 脚本文件 -->
                     <script src="https://unpkg.com/@waline/client@v2/dist/waline.js"></script>
                     <!-- 样式文件 -->
