--- a/index.html
+++ b/index.html
@@ -57,12 +57,18 @@
     </div>
     <div class="footer2" id="footer2">
         <p>
+            <h3>最新说说</h3>
+            内容：<br><span id="speakinner"></span>
+            <br>时间：<span id="speaktime"></span>
+            <br>标签：<span id="speaktag"></span>
+            <hr>
             <div class="Links2">
                 <h3 class="">Links</h3>
                 Blog: <a href="https://blog.imfmkli.top">Blog</a>--<a href="https://blog2.imfmkli.top/">备用Blog</a><br>
                 Other: <a href="https://www.imfmkli.top/talk2.html">留言板</a>--<a href="https://www.imfmkli.top/say.html">说说</a>--<a href="https://www.imfmkli.top/goodpassword">密码生成</a><br>
                 Game: <a href="https://dino.imfmkli.top/">小恐龙</a>--<a href="https://sg.imfmkli.top/?lang=zh_cn">A Dark Room</a>--<a href="https://eatkano.imfmkli.top/">吃掉小菜狗</a><br>
                 Contact Me: <a class="mdui-list-item mdui-ripple" href="https://github.com/fmkli">Github</a>--<a class="mdui-list-item mdui-ripple" href="https://space.bilibili.com/543825809">BiliBili</a>--<a class="mdui-list-item mdui-ripple" href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2">CCW</a>--<a class="mdui-list-item mdui-ripple" href="mailto:fmkli2@qq.com">Mail</a>--<a class="mdui-list-item mdui-ripple" href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a><br>
+                <hr>
             </div>
             <h3 class="">其它</h3>
             Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>--<a class="lianjie" href="https://www.zxqblog.cn/">小钊的博客</a>
