更新正版玩家工具 - 添加接口

--- a/getskin/index.html
+++ b/getskin/index.html
@@ -16,8 +16,10 @@
 <button onclick="checkjava();">开始检测</button>
 <p id="check"></p>
 <p id="zbuse"></p>
+<p id="skin"></p>
+<p id="cape"></p>
 <br>
-<p id="">本页依赖接口https://playerdb.co/</p>
+<p id="">本页依赖接口https://playerdb.co/及https://crafatar.com/</p>
 <p id="">因为离线登录，你看到的玩家不一定是正版</p>
 
 </body>
