彩蛋的增加 / 页脚加高 - Fmkli

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <br>Blog: <a href="https://blog.imfmkli.top">Blog</a>--<a href="https://blog2.imfmkli.top/">备用Blog</a><br>
         Other: <a href="https://www.imfmkli.top/talk2.html">留言板</a>--<a href="https://www.imfmkli.top/say.html">说说</a>--<a href="https://www.imfmkli.top/goodpassword">密码生成</a><br>
         Game: <a href="https://dino.imfmkli.top/">小恐龙</a>--<a href="https://sg.imfmkli.top/?lang=zh_cn">A Dark Room</a>--<a href="https://eatkano.imfmkli.top/">吃掉小菜狗</a><br>
-        Contact Me: <a class="mdui-list-item mdui-ripple" href="https://github.com/fmkli">Github</a>--<a class="mdui-list-item mdui-ripple" href="https://space.bilibili.com/543825809">BiliBili</a>--<a class="mdui-list-item mdui-ripple" href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2">CCW</a>--<a class="mdui-list-item mdui-ripple" href="mailto:fmkli2@qq.com">Mail</a>--<a class="mdui-list-item mdui-ripple" href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a><br>
         Play Minecraft With Me：<a class="mdui-list-item mdui-ripple" href="https://namemc.com/profile/Imfmkli.1">NameMC</a>--<a class="mdui-list-item mdui-ripple" href="https://account.xbox.com/zh-cn/Profile?csrf=ZsW_GcUpY5dqva3pDTFAKhUimU18l77Pjgpovdfw4v186lQxGrJm4SsEnBGxqCv5xU4XXwdJDSO6cVCNiw1wvBw9R2w1">Xbox档案</a><br>
         <br><a href="https://www.imfmkli.top/getskin/" class="zhongyaolink">看看Minecraft玩家事不事正版玩家</a>
         <br><a href="https://www.imfmkli.top/talk2.html" class="zhongyaolink">留言板</a>
@@ -28,7 +27,17 @@
         <h3 class="">About Me</h3>
         一名专注潜水的鸽子！<br>
         喜欢玩Minecraft！<br>
-        只在周五、六、日以及节假日上线<hr>
+        只在周五、六、日以及节假日上线
+        <hr>
+        <h3 class="">Contact Me</h3>
+        找到我 / 联系我：
+        <br><a class="mdui-list-item mdui-ripple" href="https://github.com/fmkli">Github</a>--<a class="mdui-list-item mdui-ripple" href="https://space.bilibili.com/543825809">BiliBili</a>--<a class="mdui-list-item mdui-ripple" href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2">CCW</a>--<a class="mdui-list-item mdui-ripple" href="mailto:fmkli2@qq.com">Mail</a>--<a class="mdui-list-item mdui-ripple" href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a><br>
+        <hr>
+        <h3 class="">Play Minecraft With Me</h3>
+        什么没人和我玩？呜呜呜
+        <br><a class="mdui-list-item mdui-ripple" href="https://namemc.com/profile/Imfmkli.1">NameMC</a>--<a class="mdui-list-item mdui-ripple" href="https://account.xbox.com/zh-cn/Profile?csrf=ZsW_GcUpY5dqva3pDTFAKhUimU18l77Pjgpovdfw4v186lQxGrJm4SsEnBGxqCv5xU4XXwdJDSO6cVCNiw1wvBw9R2w1">Xbox档案</a><br>
+        联系方式在上面哇！
+        <hr>
         <h3 class="">其它</h3>
         Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>--<a class="lianjie" href="https://www.zxqblog.cn/">小钊的博客</a>
         <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
@@ -41,6 +50,7 @@
             <a href="https://www.imfmkli.top" id="power-text">Fmkli</a>
         </span>
         <span id="made">; Made by <a href="https://www.imfmkli.top" target="_blank">Fmkli</a></span>
+        <div class="footer2" onclick="coloregg();"></div>
     </div>
 
 
