小改：去除博客链接等

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
         <hr>公告：
         <br>过段时间会将博客停摆，维护太™麻烦辣
         <hr>Links：
-        <br>Blog: <a href="https://blog.imfmkli.top">Blog</a>--<a href="https://blog2.imfmkli.top/">备用Blog</a><br>
-        Other: <a href="https://www.imfmkli.top/talk2.html">留言板</a>--<a href="https://www.imfmkli.top/say.html">说说</a>--<a href="https://www.imfmkli.top/goodpassword">密码生成</a><br>
+        <br>Other: <a href="https://www.imfmkli.top/talk2.html">留言板</a>--<a href="https://www.imfmkli.top/say.html">说说</a>--<a href="https://www.imfmkli.top/goodpassword">密码生成</a><br>
         Game: <a href="https://dino.imfmkli.top/">小恐龙</a>--<a href="https://sg.imfmkli.top/?lang=zh_cn">A Dark Room</a>--<a href="https://eatkano.imfmkli.top/">吃掉小菜狗</a><br>
-        Play Minecraft With Me：<a class="mdui-list-item mdui-ripple" href="https://namemc.com/profile/Imfmkli.1">NameMC</a>--<a class="mdui-list-item mdui-ripple" href="https://account.xbox.com/zh-cn/Profile?csrf=ZsW_GcUpY5dqva3pDTFAKhUimU18l77Pjgpovdfw4v186lQxGrJm4SsEnBGxqCv5xU4XXwdJDSO6cVCNiw1wvBw9R2w1">Xbox档案</a><br>
         <br><a href="https://www.imfmkli.top/getskin/" class="zhongyaolink">看看Minecraft玩家事不事正版玩家</a>
         <br><a href="https://www.imfmkli.top/talk2.html" class="zhongyaolink">留言板</a>
         <br><a href="https://www.imfmkli.top/say.html" class="zhongyaolink">说说</a>
@@ -31,7 +29,7 @@
         <hr>
         <h3 class="">Contact Me</h3>
         找到我 / 联系我：
-        <br><a class="mdui-list-item mdui-ripple" href="https://github.com/fmkli">Github</a>--<a class="mdui-list-item mdui-ripple" href="https://space.bilibili.com/543825809">BiliBili</a>--<a class="mdui-list-item mdui-ripple" href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2">CCW</a>--<a class="mdui-list-item mdui-ripple" href="mailto:fmkli2@qq.com">Mail</a>--<a class="mdui-list-item mdui-ripple" href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a><br>
+        <br><a class="mdui-list-item mdui-ripple" href="https://github.com/fmkli">Github</a>--<a class="mdui-list-item mdui-ripple" href="https://space.bilibili.com/543825809">BiliBili</a>--<a class="mdui-list-item mdui-ripple" href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2">CCW</a>--<a class="mdui-list-item mdui-ripple" href="mailto:fmkli2@qq.com">Mail A</a>--<a class="mdui-list-item mdui-ripple" href="mailto:uwu@imfmkli.top">Mail B</a>--<a class="mdui-list-item mdui-ripple" href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a><br>
         <hr>
         <h3 class="">Play Minecraft With Me</h3>
         什么没人和我玩？呜呜呜
