--- a/index.html
+++ b/index.html
@@ -1,62 +1,168 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fmkli's Website</title>
-    <link rel="stylesheet" href="./static/css/style.css">
+    <title>鸽的主页</title>
+    <meta name="keywords" content="鸽子主页,Fmkli,imfmkli"/>
+    <meta name="description" content="菜菜鸽子的主页，来吧来吧"/>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="static/css/loading.css">
+    <link rel="stylesheet" href="static/css/qita.css">
 </head>
-<body>
-    <!-- 主体~~~~！ -->
-    <div class="box">
-        <img alt="Fmkli's HeadImage" src="./static/image/pigeon.png" class="headimg">
-        <br><p class="Fmklihead">Fmkli</p>
-        <br>只是一个网站而已 ~
-        <br>简陋的不能再简陋了
-        <hr>公告：
-        <br>过段时间会将博客停摆，维护太™麻烦辣
-        <hr>Links：
-        <br>Other: <a href="https://www.imfmkli.top/talk2.html">留言板</a>--<a href="https://www.imfmkli.top/say.html">说说</a>--<a href="https://www.imfmkli.top/goodpassword">密码生成</a><br>
-        Game: <a href="https://dino.imfmkli.top/">小恐龙</a>--<a href="https://sg.imfmkli.top/?lang=zh_cn">A Dark Room</a>--<a href="https://eatkano.imfmkli.top/">吃掉小菜狗</a><br>
-        <br><a href="https://www.imfmkli.top/getskin/" class="zhongyaolink">看看Minecraft玩家事不事正版玩家</a>
-        <br><a href="https://www.imfmkli.top/talk2.html" class="zhongyaolink">留言板</a>
-        <br><a href="https://www.imfmkli.top/say.html" class="zhongyaolink">说说</a>
-        <hr>
-        <h3 class="">About Me</h3>
-        一名专注潜水的鸽子！<br>
-        喜欢玩Minecraft！<br>
-        只在周五、六、日以及节假日上线
-        <hr>
-        <h3 class="">Contact Me</h3>
-        找到我 / 联系我：
-        <br><a class="mdui-list-item mdui-ripple" href="https://github.com/fmkli">Github</a>--<a class="mdui-list-item mdui-ripple" href="https://space.bilibili.com/543825809">BiliBili</a>--<a class="mdui-list-item mdui-ripple" href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2">CCW</a>--<a class="mdui-list-item mdui-ripple" href="mailto:fmkli2@qq.com">Mail A</a>--<a class="mdui-list-item mdui-ripple" href="mailto:uwu@imfmkli.top">Mail B</a>--<a class="mdui-list-item mdui-ripple" href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a><br>
-        <hr>
-        <h3 class="">Play Minecraft With Me</h3>
-        什么没人和我玩？呜呜呜
-        <br><a class="mdui-list-item mdui-ripple" href="https://namemc.com/profile/Imfmkli.1">NameMC</a>--<a class="mdui-list-item mdui-ripple" href="https://account.xbox.com/zh-cn/Profile?csrf=ZsW_GcUpY5dqva3pDTFAKhUimU18l77Pjgpovdfw4v186lQxGrJm4SsEnBGxqCv5xU4XXwdJDSO6cVCNiw1wvBw9R2w1">Xbox档案</a><br>
-        联系方式在上面哇！
-        <hr>
-        <h3 class="">其它</h3>
-        Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>--<a class="lianjie" href="https://www.zxqblog.cn/">小钊的博客</a>
-        <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
-        <br><span id="lasttime">载入倒计时...</span>
-        <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
-        <br><span id="power">Copyright
-            <script>
-                document.write((new Date()).getFullYear());
-            </script>
-            <a href="https://www.imfmkli.top" id="power-text">Fmkli</a>
-        </span>
-        <span id="made">; Made by <a href="https://www.imfmkli.top" target="_blank">Fmkli</a></span>
-        <div class="footer2" onclick="coloregg();"></div>
+<body class="locked">
+    <div class="self-avatar flex-center">
+        <div class="loading-mask fixed-layer no-delay"></div>
+        <div class="loading-wrapper">
+            <svg class="loading-indicator no-delay" width="128" height="128">
+                <g class="circle-rotating">
+                    <g class="circle-step">
+                        <circle cx="64" cy="64" r="56" class="circle-line"></circle>
+                    </g>
+                </g>
+            </svg>
+            <img alt="" src="https://www.imfmkli.top/pigen.png" class="avatar-img no-delay"/>
+        </div>
+        <div class="loading-text text-center">
+            <p class="loading-pre">Loading...</p>
+            <p class="avatar-name">鸽子Fmkli</p>
+            <p class="dokidoki-text"></p>
+        </div>
     </div>
+    <div class="background-layer fixed-layer"></div>
+    <div class="background-filter fixed-layer"></div>
+    <div class="content-layer flex-center">
+        <div class="content-container">
+            <div class="self-wrapper">
+                <div class="self-content links-container flex-center text-center">
+                    <a href="https://www.imfmkli.top/talk2.html" class="link-item" id="link-item">
+                        <div class="link-icon"><i class="fa fa-pencil"></i></div>
+                        <div class="linktitle">留言板</div>
+                    </a>
+                    <a href="https://www.imfmkli.top/say.html" class="link-item" id="link-item">
+                        <div class="link-icon"><i class="fa fa-list-ul"></i></div>
+                        <div class="linktitle">说说</div>
+                    </a>
+                    <a href="https://fmkli.github.io/Privacy-policy/" class="link-item" id="link-item">
+                        <div class="link-icon"><i class="fa fa-question-circle"></i></div>
+                        <div class="linktitle">隐私政策</div>
+                    </a>
+                    <a href="https://www.imfmkli.top/goodpassword" class="link-item" id="link-item">
+                        <div class="link-icon"><i class="fa fa-lock"></i></div>
+                        <div class="linktitle">密码生成</div>
+                    </a>
+                    <a href="https://dino.imfmkli.top/" class="link-item" id="link-item">
+                        <div class="link-icon"><i class="fa fa-gamepad"></i></div>
+                        <div class="linktitle">小恐龙</div>
+                    </a>                    
+                    <a href="https://sg.imfmkli.top/?lang=zh_cn" class="link-item" id="link-item">
+                        <div class="link-icon"><i class="fa fa-gamepad"></i></div>
+                        <div class="linktitle">小黑屋</div>
+                    </a>                    
+                    <a href="https://eatkano.imfmkli.top/" class="link-item" id="link-item">
+                        <div class="link-icon"><i class="fa fa-gamepad"></i></div>
+                        <div class="linktitle">吃掉小菜狗</div>
+                    </a>
+                    <a href="https://www.imfmkli.top/getskin/" class="link-item" id="link-item">
+                        <div class="link-icon"><i class="fa fa-gamepad"></i></div>
+                        <div class="linktitle">Minecraft<br>正版查询</div>
+                    </a>
+                    <span class="link-item coloregg" id="coloregg" onclick="coloregg();">
+                        <div class="link-icon"><i class="fa fa-gamepad"></i></div>
+                        <div class="linktitle">补位专用</div>
+                    </span>
 
+                </div>
+                <div class="self-content article-container">
+                    <div class="article-content"></div>
+                    <div class="article-loading flex-center" id="speakin">
+                        <svg style="visibility: hidden" class="loading-indicator" width="128" height="128">
+                            <g class="circle-rotating">
+                                <g class="circle-step">
+                                    <circle cx="64" cy="64" r="56" class="circle-line"></circle>
+                                </g>
+                            </g>
+                        </svg>
+                        <span class="text-center">Loading...</span>
+                    </div>
+                </div>
+                <div class="self-content">
+                    <div class="info-container center">
+                        一个挣扎存活于网络边缘的网站，默默无闻
+                        <br>站长开学后只在周五、周六、周日上线，封校除外。 
+                        <hr><h3 class="">Contact Me</h3>
+                        找到我 / 联系我：
+                        <br><a class="contactmelink" href="https://github.com/fmkli">Github</a>--<a class="contactmelink" href="https://space.bilibili.com/543825809">BiliBili</a>--<a class="contactmelink" href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2">CCW</a>--<a class="contactmelink" href="mailto:fmkli2@qq.com">Mail A</a>--<a class="contactmelink" href="mailto:uwu@imfmkli.top">Mail B</a>--<a class="contactmelink" href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a><br>
+                        <hr>
+                        <h3 class="">Play Minecraft With Me</h3>
+                        什么没人和我玩？呜呜呜
+                        <br><a class="contactmelink" href="https://namemc.com/profile/Imfmkli.1">NameMC</a>--<a class="contactmelink" href="https://account.xbox.com/zh-cn/Profile?csrf=ZsW_GcUpY5dqva3pDTFAKhUimU18l77Pjgpovdfw4v186lQxGrJm4SsEnBGxqCv5xU4XXwdJDSO6cVCNiw1wvBw9R2w1">Xbox档案</a><br>
+                        联系方式在上面哇！
+                        <hr>
+                        <h3>其他</h3>
+                        <span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
+                        <br><span id="lasttime">载入倒计时...</span>
+                        <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
 
+                    </div>
 
-
-
-
-
-    <script src="./static/js/index.js"></script>
+                </div>
+            </div>
+            <div class="self-switcher">
+                <div class="switcher-btn text-center" id="switcher-btn-1" onclick="coloregg4();">
+                    <div class="btn-icon"><i class="fa fa-link"></i></div>
+                    <div class="btn-text">链接</div>
+                </div>
+                <div class="switcher-btn text-center" id="switcher-btn-2">
+                    <div class="btn-icon"><i class="fa fa-book"></i></div>
+                    <div class="btn-text">文章</div>
+                </div>
+                <div class="switcher-btn text-center" id="switcher-btn-3">
+                    <div class="btn-icon"><i class="fa fa-info-circle"></i></div>
+                    <div class="btn-text">关于</div>
+                </div>
+                <div class="btn-select-indicator"></div>
+            </div>
+        </div>
+        <div class="footer-container text-center">
+            © 2022 By <a href="#">Fmkli</a>
+            <br>Make by <a href="https://github.com/KawaiiZapic">Zapic</a>
+            <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
+        </div>
+    </div>
 </body>
+
+<link rel="stylesheet" href="static/css/main.css">
+<link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/ClassicOldSong/typinyin.js@0.1.3/typinyin.css">
+<link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans" media="none" onload="this.media='all'">
+<script src="https://fastly.jsdelivr.net/gh/ClassicOldSong/typinyin.js@master/typinyin.min.js"></script>
+<script src="static/js/main.js"></script>
+<script src="static/js/qita.js"></script>
+<script src="static/js/jquery.js"></script>
+<script>
+    (function () {
+        var feedType = "xml";
+        var feedPath = "https://kkapi.imfmkli.top/api/ispeak?author=62fb537eea70bbc9782bcf6d&page=1&pageSize=5";
+        var bgArr = [{
+            "url": "https://api.dujin.org/bing/1920.php",
+            "thumb": "https://api.dujin.org/bing/1920.php"
+        }];
+        var senArr = [
+            {
+                ch: ["Welcome here!"],
+                py: ["Welcome here!"],
+            }, {
+                ch: ["欢迎", "来到", "这里", "。"],
+                py: ["huan'ying", "lai'dao", "zhe'li", "。"],
+            }
+        ];
+
+        Init(feedType, feedPath, bgArr, senArr);
+    })();
+</script>
+<style>
+
+</style>
 </html>
