--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
             }, {
                 ch: ["欢迎", "来到", "这里", "。"],
                 py: ["huan'ying", "lai'dao", "zhe'li", "。"],
+            }, {
+                ch: ["点", "一下", "补位", "专用", "有", "惊喜", "！"],
+                py: ["dian", "yi'xia", "bu'wei", "zhuan'yong", "you", "jing'xi", "！"],
             }
         ];
 
