--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="switcher-btn text-center" id="switcher-btn-2">
                     <div class="btn-icon"><i class="fa fa-book"></i></div>
-                    <div class="btn-text">文章</div>
+                    <div class="btn-text">说说</div>
                 </div>
                 <div class="switcher-btn text-center" id="switcher-btn-3">
                     <div class="btn-icon"><i class="fa fa-info-circle"></i></div>
