添加公告 - 彩蛋去除 - 更新MDUI

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="static/css/loading.css">
     <link rel="stylesheet" href="static/css/qita.css">
+    <link rel="stylesheet" href="static/mdui/mdui.css">
 </head>
-<body class="locked">
+<body class="locked" >
     <div class="self-avatar flex-center">
         <div class="loading-mask fixed-layer no-delay"></div>
         <div class="loading-wrapper">
@@ -22,7 +23,7 @@
                     </g>
                 </g>
             </svg>
-            <img alt="" src="https://www.imfmkli.top/pigen.png" class="avatar-img no-delay"/>
+            <img alt="" src="https://cutee.top/pigen.png" class="avatar-img no-delay" id="avatar-img"/>
         </div>
         <div class="loading-text text-center">
             <p class="loading-pre">Loading...</p>
@@ -36,11 +37,11 @@
         <div class="content-container">
             <div class="self-wrapper">
                 <div class="self-content links-container flex-center text-center">
-                    <a href="https://www.imfmkli.top/talk2.html" class="link-item" id="link-item">
+                    <a href="https://cutee.top/talk2.html" class="link-item" id="link-item">
                         <div class="link-icon"><i class="fa fa-pencil"></i></div>
                         <div class="linktitle">留言板</div>
                     </a>
-                    <a href="https://www.imfmkli.top/say.html" class="link-item" id="link-item">
+                    <a href="https://cutee.top/say.html" class="link-item" id="link-item">
                         <div class="link-icon"><i class="fa fa-list-ul"></i></div>
                         <div class="linktitle">说说</div>
                     </a>
@@ -48,29 +49,29 @@
                         <div class="link-icon"><i class="fa fa-question-circle"></i></div>
                         <div class="linktitle">隐私政策</div>
                     </a>
-                    <a href="https://www.imfmkli.top/goodpassword" class="link-item" id="link-item">
+                    <a href="https://cutee.top/goodpassword" class="link-item" id="link-item">
                         <div class="link-icon"><i class="fa fa-lock"></i></div>
                         <div class="linktitle">密码生成</div>
                     </a>
-                    <a href="https://dino.imfmkli.top/" class="link-item" id="link-item">
+                    <a href="https://dino.cutee.top/" class="link-item" id="link-item">
                         <div class="link-icon"><i class="fa fa-gamepad"></i></div>
                         <div class="linktitle">小恐龙</div>
                     </a>                    
-                    <a href="https://sg.imfmkli.top/?lang=zh_cn" class="link-item" id="link-item">
+                    <a href="https://sg.cutee.top/?lang=zh_cn" class="link-item" id="link-item">
                         <div class="link-icon"><i class="fa fa-gamepad"></i></div>
                         <div class="linktitle">小黑屋</div>
                     </a>                    
-                    <a href="https://eatkano.imfmkli.top/" class="link-item" id="link-item">
+                    <a href="https://eatkano.cutee.top/" class="link-item" id="link-item">
                         <div class="link-icon"><i class="fa fa-gamepad"></i></div>
                         <div class="linktitle">吃掉小菜狗</div>
                     </a>
-                    <a href="https://www.imfmkli.top/getskin/" class="link-item" id="link-item">
+                    <a href="https://cutee.top/getskin/" class="link-item" id="link-item">
                         <div class="link-icon"><i class="fa fa-gamepad"></i></div>
                         <div class="linktitle">Minecraft<br>正版查询</div>
                     </a>
-                    <span class="link-item coloregg" id="coloregg" onclick="coloregg();">
+                    <span class="link-item coloregg" id="coloregg" onclick="opengg2();">
                         <div class="link-icon"><i class="fa fa-gamepad"></i></div>
-                        <div class="linktitle">补位专用</div>
+                        <div class="linktitle">公告</div>
                     </span>
 
                 </div>
@@ -93,7 +94,7 @@
                         <br>站长开学后只在周五、周六、周日上线，封校除外。 
                         <hr><h3 class="">Contact Me</h3>
                         找到我 / 联系我：
-                        <br><a class="contactmelink" href="https://github.com/fmkli">Github</a>--<a class="contactmelink" href="https://space.bilibili.com/543825809">BiliBili</a>--<a class="contactmelink" href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2">CCW</a>--<a class="contactmelink" href="mailto:fmkli2@qq.com">Mail A</a>--<a class="contactmelink" href="mailto:uwu@imfmkli.top">Mail B</a>--<a class="contactmelink" href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a><br>
+                        <br><a class="contactmelink" href="https://github.com/fmkli">Github</a>--<a class="contactmelink" href="https://space.bilibili.com/543825809">BiliBili</a>--<a class="contactmelink" href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2">CCW</a>--<a class="contactmelink" href="mailto:fmkli2@qq.com">Mail A</a>--<a class="contactmelink" href="mailto:uwu@cutee.top">Mail B</a>--<a class="contactmelink" href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a><br>
                         <hr>
                         <h3 class="">Play Minecraft With Me</h3>
                         什么没人和我玩？呜呜呜
@@ -104,13 +105,14 @@
                         <span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
                         <br><span id="lasttime">载入倒计时...</span>
                         <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
+                        <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
 
                     </div>
 
                 </div>
             </div>
             <div class="self-switcher">
-                <div class="switcher-btn text-center" id="switcher-btn-1" onclick="coloregg4();">
+                <div class="switcher-btn text-center" id="switcher-btn-1">
                     <div class="btn-icon"><i class="fa fa-link"></i></div>
                     <div class="btn-text">链接</div>
                 </div>
@@ -128,9 +130,21 @@
         <div class="footer-container text-center">
             © <span id="getyear">0000</span> By <a href="#">Fmkli</a>
             <br>Make by <a href="https://github.com/KawaiiZapic">Zapic</a>
-            <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
         </div>
     </div>
+
+    <!-- MDUI对话框 - 公告 - Copy By MDUI Docs-->
+    <mdui-dialog
+    headline="公告"
+    close-on-esc
+    close-on-overlay-click
+    class="example-ecs"
+    id="gonggao"
+    >
+    <p>本站换域名了，由 <a href="//www.imfmkli.top">www.imfmkli.top</a> 更换为 <a href="//cutee.top">cutee.top</a></a><br>本公告只会显示一次，会调用 COOKIE 储存！</p>
+    <mdui-button slot="action" onclick="closeclick()">OK</mdui-button>
+    </mdui-dialog>
+
 </body>
 
 <link rel="stylesheet" href="static/css/main.css">
@@ -141,6 +155,7 @@
 <script src="static/js/main.js"></script>
 <script src="static/js/qita.js"></script>
 <script src="static/js/jquery.js"></script>
+<script src="static/mdui/mdui.js"></script>
 <script>
     (function () {
         var feedType = "xml";
@@ -164,8 +179,32 @@
 
         Init(feedType, feedPath, bgArr, senArr);
     })();
+
+    /*Copy By MDUI Docs*/
+    const dialog = document.querySelector(".example-ecs");
+    const openButton = dialog.nextElementSibling;
+    const closeButton = dialog.querySelector("mdui-button");
+
+    openButton.addEventListener("click", () => dialog.open = true);
+    closeButton.addEventListener("click", () => dialog.open = false);
+
+    allCookies = document.cookie;
+
+    function opengg(){
+        if (cookieget('closeclick') == 'closeclick') {
+            dialog.open = false;
+        } else {
+            dialog.open = true;
+        }
+    }
+    function opengg2(){
+        dialog.open = true;
+    }
+
 </script>
+
 <style>
 
 </style>
+
 </html>
