--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>鸽的主页</title>
-    <meta name="keywords" content="鸽子主页,Fmkli,imfmkli"/>
-    <meta name="description" content="菜菜鸽子的主页，来吧来吧"/>
+    <meta name="keywords" content="个人主页,Fmkli,imfmkli,个人网站,个人说说,鸽子的网站"/>
+    <meta name="description" content="Fmkli，一名学生，是个草根站长，这个是我的个人网站，从2020年开设至今，开来玩的，主要展示个人说说"/>
+    <meta name="anthor" content="Imfmkli,fmkli2@qq.com">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -23,7 +24,7 @@
                     </g>
                 </g>
             </svg>
-            <img alt="" src="https://cutee.top/pigen.png" class="avatar-img no-delay" id="avatar-img"/>
+            <img alt="这个是我的头像辣~" src="https://cutee.top/pigen.png" class="avatar-img no-delay" id="avatar-img"/>
         </div>
         <div class="loading-text text-center">
             <p class="loading-pre">Loading...</p>
