--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>鸽的主页</title>
+    <title>Fmkli的主页</title>
     <meta name="keywords" content="个人主页,Fmkli,imfmkli,个人网站,个人说说,鸽子的网站"/>
     <meta name="description" content="Fmkli，一名学生，是个草根站长，这个是我的个人网站，从2020年开设至今，开来玩的，主要展示个人说说"/>
     <meta name="anthor" content="Imfmkli,fmkli2@qq.com">
