--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
                 </div>
                 <div class="self-content article-container">
-                    <div class="article-content"></div>
-                    <div class="article-loading flex-center" id="speakin">
+                    <!--<div class="article-content"></div>-->
+                    <!--<div class="article-loading flex-center" id="speakin">
                         <svg style="visibility: hidden" class="loading-indicator" width="128" height="128">
                             <g class="circle-rotating">
                                 <g class="circle-step">
@@ -87,7 +87,11 @@
                             </g>
                         </svg>
                         <span class="text-center">Loading...</span>
-                    </div>
+                    </div>-->
+                    <center>
+                    Play Games With Me?
+                    <br><a class="contactmelink" href="https://namemc.com/profile/Imfmkli.1">NameMC</a>--<a class="contactmelink" href="https://account.xbox.com/zh-cn/Profile?csrf=ZsW_GcUpY5dqva3pDTFAKhUimU18l77Pjgpovdfw4v186lQxGrJm4SsEnBGxqCv5xU4XXwdJDSO6cVCNiw1wvBw9R2w1">Xbox档案</a>--<a class="contactmelink" href="https://steamcommunity.com/id/fmkli/">Steam档案</a>
+                    </center>
                 </div>
                 <div class="self-content">
                     <div class="info-container center">
