--- a/getskin/index.html
+++ b/getskin/index.html
@@ -13,7 +13,7 @@
 
 <input type="text" id="name" name="name" required/>
 
-<button onclick="checkjava();">开始检测</button>
+<button onclick="checkjava();">撅一下br马上就给你看</button>
 <p id="check"></p>
 <p id="zbuse"></p>
 <p id="skin"></p>
