纠正一些字眼

--- a/getskin/index.html
+++ b/getskin/index.html
@@ -20,7 +20,7 @@
 <p id="cape"></p>
 <br>
 <p id="">本页依赖接口https://playerdb.co/及https://crafatar.com/</p>
-<p id="">因为离线登录，你看到的玩家不一定是正版</p>
+<p id="">因为离线游戏，你看到的玩家不一定是正版</p>
 
 </body>
 </html>
