--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                     <div class="btn-text">链接</div>
                 </div>
                 <div class="switcher-btn text-center" id="switcher-btn-2">
-                    <div class="btn-icon"><i class="fa fa-book"></i></div>
-                    <div class="btn-text">说说</div>
+                    <div class="btn-icon"><i class="fa fa-game"></i></div>
+                    <div class="btn-text">Game</div>
                 </div>
                 <div class="switcher-btn text-center" id="switcher-btn-3">
                     <div class="btn-icon"><i class="fa fa-info-circle"></i></div>
