小更新 - 增加友链
小更新 - 增加友链

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <div class="footer-container text-center">
             © <span id="getyear">0000</span> By <a href="#">Fmkli</a>
-            <br>Make by <a href="https://github.com/KawaiiZapic">Zapic</a>
+            <br>Make by <a href="https://github.com/KawaiiZapic">Zapic</a> | Friend：<a href="//tdbbs.top">TDBBS</a>
         </div>
     </div>
 
