小更新 - 增加友链
小更新 - 增加友链

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                         <br><span id="lasttime">载入倒计时...</span>
                         <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
                         <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
+                        <br>Friend：<a href="//tdbbs.top">TDBBS</a>
 
                     </div>
 
