--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <i class="mdui-collapse-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
                     </div>
                     <ul class="mdui-collapse-item-body mdui-list">
-                        <a class="mdui-list-item mdui-ripple" href="https://cutee.top/talk2.html">
+                        <a class="mdui-list-item mdui-ripple" href="https://fvli.top/talk2.html">
                             <div class="mdui-list-item-content">留言板</div>
                         </a>
                     </ul>
@@ -64,7 +64,7 @@
                 <div class="mdui-card-media">
                 </div>
                 <div class="mdui-card-actions">
-                    <a href="https://cutee.top/" class="mdui-btn mdui-ripple">喵喵喵</a>
+                    <a href="https://fvli.top/" class="mdui-btn mdui-ripple">喵喵喵</a>
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
                     <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
                     <br><span id="lasttime">载入倒计时...</span>
                     <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
-                    <h2><a href="https://cutee.top/video/114514.mp4">这是一个可点击的链接</a></h2>
+                    <h2><a href="https://fvli.top/video/114514.mp4">这是一个可点击的链接</a></h2>
                 </p>
             </div>
         </div><br>
