--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                             <div class="mdui-list-item-content">留言板</div>
                         </a>
                     </ul>
+                    <ul class="mdui-collapse-item-body mdui-list">
+                        <a class="mdui-list-item mdui-ripple" href="https://x.fvli.top/">
+                            <div class="mdui-list-item-content">My XLOG</div>
+                        </a>
+                    </ul>
                 </li>
                 
 
