--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
         <!-- 卡片一 -->
         <div class="mdui-card card">
             <div class="mdui-card-primary">
-                <div class="mdui-card-primary-title">公告</div>
-                <div class="mdui-card-primary-subtitle">破公告栏</div>
+                <div class="mdui-card-primary-title">My Devise</div>
+                <div class="mdui-card-primary-subtitle">我的电子设备</div>
             </div>
             <!-- 卡片的内容 -->
             <div class="mdui-card-content" id="posts">
-                <p>无</p>
+                <p>1.REDMI Turbo 4 祥云白 16+256G</br>2.一台搭载了i3-8100的CPU和GTX1070Ti的GPU的电脑</br>3.Nintendo Switch（卖了）</br>4.New Nintendo 3ds（卖了）</br>5.荣耀20（换掉了）</br>6.REDMI Buds 6 Lite（青春版）（有点想换CMF By Nothing的耳机）</br>7.小米手环9 NFC版</br>etc.</p>
             </div>
         </div><br>
 
